--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.1",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.398.0",
+    "@aws-sdk/client-polly": "^3.984.0",
+    "@aws-sdk/client-s3": "^3.984.0",
+    "@aws-sdk/client-translate": "^3.984.0",
     "@aws-sdk/lib-dynamodb": "^3.398.0"
   },
-  "devDependencies": {},
   "scripts": {}
 }
